# tiangong_ros

./: .gitignore  CMakeLists.txt  README.en.md  README.md  package.xml  rlctrlnew_plugin.xml
include/broccoli/analysis/taskspace/: KinematicChain.hpp  KinematicChainSegment.hpp  TaskSpace.hpp  TaskSpaceBoundingBox.hpp  TaskSpaceCell.hpp  TaskSpaceCellLogData.hpp  TaskSpaceEvaluator.hpp  TaskSpaceEvaluatorInput.hpp  TaskSpaceEvaluatorOutput.hpp  TaskSpaceEvaluatorResult.hpp  TaskSpaceMainSampler.hpp  TaskSpaceMesh.hpp  TaskSpaceMeshSpecification.hpp  TaskSpaceMetric.hpp  TaskSpaceOctree.hpp  TaskSpacePreSampler.hpp  TaskSpaceSample.hpp  TaskSpaceSampleEvaluator.hpp  TaskSpaceSamplerBase.hpp  TaskSpaceSamplerGroup.hpp
include/broccoli/control/: ForwardDeclarations.hpp  Signal.hpp  SignalBase.hpp  SignalLimits.hpp  Wrench.hpp  signal_helpers.hpp
include/broccoli/control/feedback/: essentials.hpp
include/broccoli/control/filters/: FIRFilter.hpp  FirstOrderLowPass.hpp  IIRFilter.hpp  NotchFilter.hpp  SecondOrderLowPass.hpp  SignalFilter.hpp
include/broccoli/control/kinematics/: AutomaticSupervisoryControl.hpp  ComfortPoseGradient.hpp  JointLimitGradient.hpp  NullSpaceGradient.hpp  VelocityLevelInverseKinematics.hpp
include/broccoli/control/lti/: Continuous2DiscreteZOH.hpp  ContinuousStateSpaceParameters.hpp  DiscreteStateSpaceParameters.hpp  StateSpaceModel.hpp  StateSpaceParametersBase.hpp
include/broccoli/control/operators/: BinaryOperator.hpp  BlendingScheme.hpp  ConstrainedIntegrator.hpp  Integrator.hpp  LinearFader.hpp  SaturatedIntegrator.hpp  Saturation.hpp  UnaryOperator.hpp
include/broccoli/control/sources/: GaussianNoise.hpp  MultiSine.hpp  SignalSource.hpp
include/broccoli/core/: CycleTimer.hpp  EnumerableState.hpp  FixedStepArithmeticNumber.hpp  IntegerTimeTypes.hpp  Nameable.hpp  StatisticsEstimator.hpp  StopWatch.hpp  Time.hpp  VectorSpaceMapper.hpp  floats.hpp  math.hpp  string.hpp  type_traits.hpp  utils.hpp
include/broccoli/core/platform/: PlatformHelper.hpp  PlatformHelperFactory.hpp  PlatformHelperMacOs.hpp  PlatformHelperPOSIX.hpp  PlatformHelperQNX.hpp
include/broccoli/curve/curves/: BSplineBasis.hpp  BSplineBasisSample.hpp  CumulativeBSplineBasisSample.hpp  Curve.hpp  DynamicSizeQuaternionCurve.hpp  ExponentialCurve.hpp  FixedSizeQuaternionCurve.hpp  InterpolatableCurve.hpp  InterpolatableQuaternionCurve.hpp  PolynomialCurve.hpp  QuaternionBSplineCurve.hpp  QuaternionBezierCurve.hpp  QuaternionCurve.hpp  (+5 more)
include/broccoli/geometry/: CGMaterial.hpp  CGMesh.hpp  CGMeshFactory.hpp  CGMeshTools.hpp  CylindricalCoordinates.hpp  DHParameters.hpp  Polygon2D.hpp  SphericalCoordinates.hpp  rotations.hpp
include/broccoli/hwl/: BusDevice.hpp  BusDriver.hpp  BusDriverControl.hpp  BusVariableRegistryBase.hpp  ForwardDeclarations.hpp  bus_types.hpp  type_traits.hpp  variables.hpp
include/broccoli/io/: compression.hpp  encoding.hpp  filesystem.hpp
include/broccoli/memory/: CircularAccessor.hpp  CircularBuffer.hpp  MultiLevelGrid.hpp  MultiVector.hpp  SmartVector.hpp  ThreadSafeData.hpp
include/broccoli/parallel/: BackgroundWorker.hpp  SynchronizedWorker.hpp  SynchronizedWorkerPool.hpp  ThreadSafeContainer.hpp
include/ovinf/: CMakeLists.txt
include/ovinf/config/: humanoid.yaml  humanoid_stand.yaml
include/ovinf/include/controller/: controller_base.hpp  init_pos.hpp  policy_controller.hpp  zero_pos.hpp
include/ovinf/include/filter/: filter_factory.hpp  filter_low_pass.hpp
include/ovinf/include/ovinf/: ovinf.hpp  ovinf_factory.hpp  ovinf_humanoid.h  ovinf_humanoid_lstm.h  ovinf_humanoid_stand.h
include/ovinf/include/robot/base/: robot_base.hpp
include/ovinf/include/robot/fc2_cifx/: hhfc_cifx_common.h  robot_hhfc_cifx.hpp
include/ovinf/include/robot/fc2_mj/: fc2_mj_common.h  robot_fc2_mj.hpp
include/ovinf/include/robot/hhfc_cifx/: robot_hhfc_cifx.hpp
include/ovinf/include/robot/hhfc_mj/: robot_hhfc_mj.hpp
include/ovinf/include/utils/: csv_logger.hpp  history_buffer.hpp
include/ovinf/src/ovinf/: ovinf_humanoid.cc  ovinf_humanoid_lstm.cc  ovinf_humanoid_stand.cc
include/ovinf/test/: CMakeLists.txt  ov_test.cc
launch/: IK.launch  rl.launch
param/: rl_control_new.txt
src/common/util/: LockFreeQueue.h
src/plugins/libctrlz/: CMakeLists.txt  LICENSE  README.md  types.hpp  vcpkg.json
src/plugins/libctrlz/CtrlZ/: CMakeLists.txt
src/plugins/libctrlz/CtrlZ/Schedulers/: AbstractScheduler.hpp
src/plugins/libctrlz/CtrlZ/Utils/: DataCenter.hpp  MathTypes.hpp  StaticStringUtils.hpp  ZObject.hpp  ZTypeTraits.hpp  ZenBuffer.hpp
src/plugins/libctrlz/CtrlZ/Workers/: AbstractWorker.hpp  AsyncLoggerWorker.hpp  ForceSensorLeftWorker.hpp  ForceSensorRightWorker.hpp  ImuProcessWorker.hpp  KeyboardCommandWorker.hpp  MotorControlWorker.hpp  MotorResetPositionWorker.hpp  NetCmdWorker.hpp  RosProcessWorker.hpp  SimpleTrajactoryGenerator.hpp
src/plugins/libctrlz/CtrlZ/Workers/NN/: AbstractInferenceWorker.hpp  CommonLocoInferenceWorker.hpp  EraxLikeInferenceWorker.hpp  HumanoidGymInferenceWorker.hpp  NetInferenceWorker.cpp  NetInferenceWorker.h  PlainInferenceWorker.hpp  UnitreeRlGymInferenceWorker.hpp
src/plugins/libctrlz/doc/: CMakeLists.txt  CtrlZ_System_Design.vsdx  stylesheet.css
src/plugins/libctrlz/example/: CMakeLists.txt
src/plugins/libctrlz/example/AirbotArm/: ArmTrackingInferenceWorker.hpp  CMakeLists.txt  config.json  main.cpp  types.hpp
src/plugins/libctrlz/example/BitbotSimulation/: CMakeLists.txt  bitbot.cmake  bitbot_mujoco.xml  config.json  main.cpp  setting.json  types.hpp  user_func.cpp  user_func.h
src/plugins/libctrlz/example/BitbotSimulation/CheckPoints/: policy_1.onnx  policy_2.onnx
src/plugins/libctrlz/example/BitbotSimulation/dependencies/: CPM_0.38.6.cmake
src/plugins/libctrlz/example/BitbotSimulation/models/: mjmodel.xml
src/plugins/rl_control_new/: AnklePitchControlDIY.cpp  AnkleTest copy.cpp  AnkleTest.cpp  LLog.hpp  RLControlDIY.cpp  RLControlNewPlugin1.cpp  ZenBuffer.hpp  filter.hpp  inference_net.hpp  interfaceBitbotNet.hpp  interfaceHeaders.h  leeMatrix.c  leeMatrix.h  parallel_ankle.hpp
(+190 files in other folders)
